--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,3 +63,17 @@ electrons-4:
   extends: .job_template
 electrons-5:
   extends: .job_template
+
+stages:
+  - test
+
+test:
+  image: node:latest
+  stage: test
+  script:
+    # install dependencies
+    - npm ci
+    # start the server in the background
+    - npm run start:ci &
+    # run Cypress tests
+    - npm run e2e
